# NomadStack-API

./:  .env.example  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_users_search_history_favorites.py
app/: main.py
app/api/endpoints/: admin.py  auth.py  favorites.py  search.py
app/core/: config.py  database.py  exceptions.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: cache.py  external_apis.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
tests/: test_admin.py  test_auth.py  test_calculate_score.py  test_endpoints.py  test_exceptions.py  test_recommendation.py  test_schemas.py
