[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nomadstack-api"
version = "1.0.0"
description = "A Travel Intelligence API aggregating multiple data sources."
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.pytest_asyncio]
default_loop_scope = "function"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
no_strict_optional = true
